force-app/main/default/objects/ATI_Job__c/fields/Date_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken__c</fullName>
    <description>Formula field referencing &apos;Date &amp; Time Taken&apos; field to display only the date, not time.</description>
    <formula>DATEVALUE( Date_Time_Taken__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Taken</label>
    <type>Date</type>
</CustomField>