force-app/main/default/objects/ATI_Job__c/fields/Date_Taken_Day__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken_Day__c</fullName>
    <formula>DAY( Date_Taken__c )</formula>
    <label>Date Taken Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>