force-app/main/default/objects/ATI_Job__c/fields/Date_Taken_Year__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken_Year__c</fullName>
    <formula>TEXT(YEAR( Date_Taken__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Taken Year</label>
    <type>Text</type>
</CustomField>