force-app/main/default/objects/ATI_Job__c/fields/Date_Time_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Submitted_for_Approval__c</fullName>
    <description>Field to indicate the date and time that an admin submits a job to an admin manager for approval.  Field populated by the &apos;Job Approval Process&apos; Initial Submission Actions Field Update.</description>
    <label>Date/Time Submitted for Approval</label>
    <type>DateTime</type>
</CustomField>