force-app/main/default/objects/ATI_Job__c/fields/Date_Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Taken__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Field to indicate the date and time the job was taken</description>
    <label>Date &amp; Time Taken</label>
    <type>DateTime</type>
</CustomField>