force-app/main/default/objects/ATI_Job__c/fields/Date_Time_to_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_to_Approval__c</fullName>
    <formula>(
TIMEVALUE( Date_Time_Approved__c )
-
TIMEVALUE(Date_Time_Submitted_for_Approval__c))
/
60000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time to Approval (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>