force-app/main/default/objects/ATI_Job__c/fields/Date_Time_to_Submit__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_to_Submit__c</fullName>
    <formula>IF(
ISBLANK(Date_Time_Submitted_for_Approval__c),
(TIMEVALUE(NOW()) - TIMEVALUE(Date_Time_Taken__c))/60000,
(TIMEVALUE(Date_Time_Submitted_for_Approval__c) -  TIMEVALUE(Date_Time_Taken__c))/60000
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time to Submit (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>