force-app/main/default/objects/ATI_Job__c/fields/Date_Work_Auth_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Work_Auth_Uploaded__c</fullName>
    <description>for managed repair program</description>
    <label>Date Work Auth Uploaded</label>
    <type>Date</type>
</CustomField>