force-app/main/default/objects/ATI_Job__c/fields/Date_Work_Authorization_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Work_Authorization_Signed__c</fullName>
    <label>Date Work Authorization Signed</label>
    <type>DateTime</type>
</CustomField>