force-app/main/default/objects/ATI_Job__c/fields/Days_From_Estim_to_Won__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Estim_to_Won__c</fullName>
    <formula>Job_Start_Date__c - Estimating_Review_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Estim to Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>