force-app/main/default/objects/ATI_Job__c/fields/Days_from_Qual_to_Estim__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Qual_to_Estim__c</fullName>
    <formula>Estimating_Review_Date__c -  Date_Time_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Qual to Estim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>