force-app/main/default/objects/ATI_Job__c/fields/Days_from_Won_to_Work_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Won_to_Work_Complete__c</fullName>
    <formula>Work_Complete_Date__c -  Job_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Won to Work Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>