force-app/main/default/objects/ATI_Job__c/fields/Days_In_Production__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Production__c</fullName>
    <formula>IF(
NOT(ISBLANK(Completion_Date__c)), 
Completion_Date__c - DATEVALUE(Job_Start_Date__c), 
TODAY() - DATEVALUE(Job_Start_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>