force-app/main/default/objects/ATI_Job__c/fields/Days_Since_Work_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Work_Complete__c</fullName>
    <formula>TODAY() - DATEVALUE( Work_Complete_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Work Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>