force-app/main/default/objects/ATI_Job__c/fields/Days_to_Billing_Completion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Billing_Completion__c</fullName>
    <formula>DATEVALUE(Billing_Complete_Date__c) - DATEVALUE(Job_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Billing Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>