force-app/main/default/objects/ATI_Job__c/fields/Days_Work_Complete_to_Billing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_Work_Complete_to_Billing_Complete__c</fullName>
    <formula>DATEVALUE(Billing_Complete_Date__c) - DATEVALUE(Work_Complete_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Work Complete to Billing Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>