force-app/main/default/objects/ATI_Job__c/fields/Default_Collector__c.field-meta.xml
<CustomField>
    <fullName>Default_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Collector</label>
    <type>Checkbox</type>
</CustomField>