force-app/main/default/objects/ATI_Job__c/fields/Deposit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Terms__c</fullName>
    <label>In Lieu of Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net Terms</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Education - Public</fullName>
                <isActive>false</isActive>
                <label>Education - Public</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Government Contractors</fullName>
                <isActive>false</isActive>
                <label>Government Contractors</label>
            </value>
            <value>
                <fullName>Healthcare - Public</fullName>
                <isActive>false</isActive>
                <label>Healthcare - Public</label>
            </value>
            <value>
                <fullName>Military Housing</fullName>
                <isActive>false</isActive>
                <label>Military Housing</label>
            </value>
            <value>
                <fullName>Regional Director approval</fullName>
                <isActive>false</isActive>
                <label>Regional Director approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>