force-app/main/default/objects/ATI_Job__c/fields/Diff__c.field-meta.xml
<CustomField>
    <fullName>Diff__c</fullName>
    <formula>ABS( Estimated_Gross_Profit_RS__c - Job_to_Date_GP_Percent_RS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>