force-app/main/default/objects/ATI_Job__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Field to note what major division/service type the job is related to.</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Biohazard</fullName>
            </value>
            <value>
                <fullName>Catastrophes</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Contents</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Emergency Svces</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Microbial</fullName>
            </value>
            <value>
                <fullName>Technical Svces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>