force-app/main/default/objects/ATI_Job__c/fields/ECONZ_Last_Callout_Time__c.field-meta.xml
<CustomField>
    <fullName>ECONZ_Last_Callout_Time__c</fullName>
    <label>ECONZ Last Succcessful Callout Time</label>
    <type>DateTime</type>
</CustomField>