force-app/main/default/objects/ATI_Job__c/fields/Econz_Manual_Sync__c.field-meta.xml
<CustomField>
    <fullName>Econz_Manual_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Econz Manual Sync</label>
    <type>Checkbox</type>
</CustomField>