force-app/main/default/objects/ATI_Job__c/fields/ECONZ_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>ECONZ_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECONZ Task Created?</label>
    <type>Checkbox</type>
</CustomField>