force-app/main/default/objects/ATI_Job__c/fields/Egnyte_Full_Path__c.field-meta.xml
<CustomField>
    <fullName>Egnyte_Full_Path__c</fullName>
    <label>Egnyte Full Path</label>
    <type>Url</type>
</CustomField>