force-app/main/default/objects/ATI_Job__c/fields/Egnyte_Path__c.field-meta.xml
<CustomField>
    <fullName>Egnyte_Path__c</fullName>
    <formula>&apos;Salesforce.com/ATI_Jobs/Jobs&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Egnyte Path</label>
    <type>Text</type>
</CustomField>