force-app/main/default/objects/ATI_Job__c/fields/Egnyte_Test__c.field-meta.xml
<CustomField>
    <fullName>Egnyte_Test__c</fullName>
    <description>test field - to be deleted after Egnyte testing is completed for moving job files under year folders</description>
    <formula>&#39;Salesforce.com/Jobs&#39; &amp; &#39;/&#39; &amp; TEXT(YEAR(DATEVALUE( Date_Time_Taken__c )))</formula>
    <label>Egnyte New Path</label>
    <type>Text</type>
</CustomField>