force-app/main/default/objects/ATI_Job__c/fields/Env_Contents_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Env_Contents_Supervisor__c</fullName>
    <description>Field to note the supervisor of Environmental or Contents jobs.</description>
    <label>Env/Contents Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alejo Rodriguez, Armando</fullName>
            </value>
            <value>
                <fullName>Almada, Marco E</fullName>
            </value>
            <value>
                <fullName>Alva, Joel</fullName>
            </value>
            <value>
                <fullName>Ambriz, David</fullName>
            </value>
            <value>
                <fullName>Ambriz, Gerardo</fullName>
            </value>
            <value>
                <fullName>Arangure, Rogelio</fullName>
            </value>
            <value>
                <fullName>Arellano, Valente</fullName>
            </value>
            <value>
                <fullName>Arias, Mauro</fullName>
            </value>
            <value>
                <fullName>Arreguin Nunez, Rigoberto</fullName>
            </value>
            <value>
                <fullName>Avina, Francisco</fullName>
            </value>
            <value>
                <fullName>Barrera, Jose</fullName>
            </value>
            <value>
                <fullName>Beltran, Maribel</fullName>
            </value>
            <value>
                <fullName>Burton, Rhonda</fullName>
            </value>
            <value>
                <fullName>Bustamante, Simon</fullName>
            </value>
            <value>
                <fullName>Calderon, Jr., Miguel</fullName>
            </value>
            <value>
                <fullName>Calderon, Miguel</fullName>
            </value>
            <value>
                <fullName>Camargo, Eduardo</fullName>
            </value>
            <value>
                <fullName>Campos, Richard J.</fullName>
            </value>
            <value>
                <fullName>Campos, Veronica</fullName>
            </value>
            <value>
                <fullName>Caraveo, Hector</fullName>
            </value>
            <value>
                <fullName>Carrasco, Daniel</fullName>
            </value>
            <value>
                <fullName>Castellanos, Ramon A.</fullName>
            </value>
            <value>
                <fullName>Cellona, Juan D.</fullName>
            </value>
            <value>
                <fullName>Cervantes, Francisco Jr.</fullName>
            </value>
            <value>
                <fullName>Chavez, Melesio</fullName>
            </value>
            <value>
                <fullName>Colon, Anthony</fullName>
            </value>
            <value>
                <fullName>Dalo, Anthony J.</fullName>
            </value>
            <value>
                <fullName>De Infante, Anastacia</fullName>
            </value>
            <value>
                <fullName>De Santiago, Juan M.</fullName>
            </value>
            <value>
                <fullName>Durazo, Christian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>