force-app/main/default/objects/ATI_Job__c/fields/ERA__c.field-meta.xml
<CustomField>
    <fullName>ERA__c</fullName>
    <formula>Account__r.ERA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERA</label>
    <type>Checkbox</type>
</CustomField>