force-app/main/default/objects/ATI_Job__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <description>To debug the PM update</description>
    <label>Error Log</label>
    <type>TextArea</type>
</CustomField>