force-app/main/default/objects/ATI_Job__c/fields/ES_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>ES_Job_Type__c</fullName>
    <description>This field is to further clarify the type of ES job.</description>
    <label>ES Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water Mitigation</fullName>
            </value>
            <value>
                <fullName>Board-Up</fullName>
            </value>
            <value>
                <fullName>Roof Tarp</fullName>
            </value>
            <value>
                <fullName>Smoke Cleaning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>