force-app/main/default/objects/ATI_Job__c/fields/Est_to_Actual_Completion_Days__c.field-meta.xml
<CustomField>
    <fullName>Est_to_Actual_Completion_Days__c</fullName>
    <formula>Completion_Date__c - Estimated_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est-to-Actual Completion Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>