force-app/main/default/objects/ATI_Job__c/fields/Estimate_Amount_JTD_worked_billed__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Amount_JTD_worked_billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimate Amount = JTD worked billed</label>
    <type>Checkbox</type>
</CustomField>