force-app/main/default/objects/ATI_Job__c/fields/Estimate_Corrected__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Corrected__c</fullName>
    <label>Estimate Corrected</label>
    <type>Date</type>
</CustomField>