force-app/main/default/objects/ATI_Job__c/fields/Estimate_Exists__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Exists__c</fullName>
    <formula>MICA_Integration__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Exists</label>
    <type>Checkbox</type>
</CustomField>