force-app/main/default/objects/ATI_Job__c/fields/Estimate_Forecast_Difference__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Forecast_Difference__c</fullName>
    <formula>Amount__c - Total_Billing_Forecast_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Forecast Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>