force-app/main/default/objects/ATI_Job__c/fields/Estimate_Only__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to indicate that the job is only an estimate</description>
    <label>Estimate Only</label>
    <type>Checkbox</type>
</CustomField>