force-app/main/default/objects/ATI_Job__c/fields/Estimate_QA_Approval__c.field-meta.xml
<CustomField>
    <fullName>Estimate_QA_Approval__c</fullName>
    <description>Created by DemandBlue as part of Xact Integration</description>
    <label>Estimate QA Approval</label>
    <type>Date</type>
</CustomField>