force-app/main/default/objects/ATI_Job__c/fields/Estimate_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Rejection_Date__c</fullName>
    <label>Estimate Rejection Date</label>
    <type>Date</type>
</CustomField>