force-app/main/default/objects/ATI_Job__c/fields/Estimate_Type__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Type__c</fullName>
    <label>Estimate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Estimate Only</fullName>
            </value>
            <value>
                <fullName>Ladder Assist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>