force-app/main/default/objects/ATI_Job__c/fields/Estimated_Completion_Date_Per_PD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date_Per_PD__c</fullName>
    <label>Estimated Completion Date Per PM</label>
    <type>Date</type>
</CustomField>