force-app/main/default/objects/ATI_Job__c/fields/Estimated_Gross_Profit_RS__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Gross_Profit_RS__c</fullName>
    <label>Estimated Gross Profit %</label>
    <summarizedField>Financial__c.Gross_Profit__c</summarizedField>
    <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>