force-app/main/default/objects/ATI_Job__c/fields/Estimating_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimating_Review_Date__c</fullName>
    <description>Date/Time field to record when the job is updated to Estimating/Review stage for reporting purposes.</description>
    <label>Estimating/Review Date</label>
    <type>DateTime</type>
</CustomField>