force-app/main/default/objects/ATI_Job__c/fields/EstimatingReview_Count__c.field-meta.xml
<CustomField>
    <fullName>EstimatingReview_Count__c</fullName>
    <description>Job Stage Count when stage is Estimating/Review</description>
    <formula>IF(ISPICKVAL( Stage__c ,&quot;Estimating/Review&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EstimatingReview Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>