force-app/main/default/objects/ATI_Job__c/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <label>ExpectedRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>