force-app/main/default/objects/ATI_Job__c/fields/Final_Job_Walk_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Job_Walk_Date__c</fullName>
    <description>Date that final job walk took place</description>
    <label>Final Job Walk Date</label>
    <type>Date</type>
</CustomField>