force-app/main/default/objects/ATI_Job__c/fields/Financial_Record_Availablity__c.field-meta.xml
<CustomField>
    <fullName>Financial_Record_Availablity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Record Availablity</label>
    <type>Checkbox</type>
</CustomField>