force-app/main/default/objects/ATI_Job__c/fields/First_Successful_Estimate_Upload__c.field-meta.xml
<CustomField>
    <fullName>First_Successful_Estimate_Upload__c</fullName>
    <label>First Successful Estimate Upload</label>
    <type>DateTime</type>
</CustomField>