force-app/main/default/objects/ATI_Job__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <formula>&quot;Q&quot;+ TEXT(CEILING(MONTH(DATEVALUE( CreatedDate )) / 3 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Period</label>
    <type>Text</type>
</CustomField>