force-app/main/default/objects/ATI_Job__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>TEXT(YEAR( DATEVALUE( CreatedDate )))</formula>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>