force-app/main/default/objects/ATI_Job__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For offerLetterToPDF method on JobUtility apex class.</description>
    <label>Flag</label>
    <type>Checkbox</type>
</CustomField>