force-app/main/default/objects/ATI_Job__c/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <defaultValue>&quot;Pipeline&quot;</defaultValue>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>