force-app/main/default/objects/ATI_Job__c/fields/ForecastCategoryName__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategoryName__c</fullName>
    <formula>CASE( Stage__c , &quot;Qualification&quot;,&quot;Pipeline&quot;, &quot;Estimating/Review&quot;, &quot;Pipeline&quot;,&quot;Won&quot;,&quot;Closed&quot;,&quot;Lost&quot;,&quot;Omitted&quot;,&quot;Work Complete&quot;,&quot;Closed&quot;,&quot;Billing Complete&quot;,&quot;Closed&quot;,&quot;Pipeline&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category</label>
    <type>Text</type>
</CustomField>