force-app/main/default/objects/ATI_Job__c/fields/Forms_Count_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Forms_Count_Jobs__c</fullName>
    <label>Forms Count Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>