force-app/main/default/objects/ATI_Job__c/fields/Future_Billing__c.field-meta.xml
<CustomField>
    <fullName>Future_Billing__c</fullName>
    <formula>Total_Billing_Forecast_Amount__c  -  Job_to_Date_Work_Billed_RS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>