force-app/main/default/objects/ATI_Job__c/fields/Getfeedback_Email__c.field-meta.xml
<CustomField>
    <fullName>Getfeedback_Email__c</fullName>
    <label>Getfeedback Email</label>
    <type>Email</type>
</CustomField>