force-app/main/default/objects/ATI_Job__c/fields/Getfeedback_EMAIL_API__c.field-meta.xml
<CustomField>
    <fullName>Getfeedback_EMAIL_API__c</fullName>
    <formula>&quot;EMAIL&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Getfeedback EMAIL API</label>
    <type>Text</type>
</CustomField>