force-app/main/default/objects/ATI_Job__c/fields/Getfeedback_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Getfeedback_Phone_Number__c</fullName>
    <description>Send survey to  Mobile</description>
    <label>Getfeedback Phone Number</label>
    <type>Phone</type>
</CustomField>