force-app/main/default/objects/ATI_Job__c/fields/Getfeedback_Remainder_Text__c.field-meta.xml
<CustomField>
    <fullName>Getfeedback_Remainder_Text__c</fullName>
    <label>Getfeedback Remainder Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>