force-app/main/default/objects/ATI_Job__c/fields/Getfeedback_SMS_API__c.field-meta.xml
<CustomField>
    <fullName>Getfeedback_SMS_API__c</fullName>
    <formula>&quot;SMS&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Getfeedback SMS API</label>
    <type>Text</type>
</CustomField>