force-app/main/default/objects/ATI_Job__c/fields/GL_Account_Prefix_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Prefix_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is check, it will overwrite the GL code assigned by the system.</description>
    <inlineHelpText>Check to overwrite.</inlineHelpText>
    <label>GL Account Prefix Overwrite</label>
    <type>Checkbox</type>
</CustomField>