force-app/main/default/objects/ATI_Job__c/fields/Google_Drive_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Name__c</fullName>
    <formula>Job_Number__c  &amp; &apos; &apos; &amp; Job_Name__c</formula>
    <label>Google Drive Folder Name</label>
    <type>Text</type>
</CustomField>