force-app/main/default/objects/ATI_Job__c/fields/Google_Drive_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Path__c</fullName>
    <description>Google Drive parent folder path</description>
    <formula>&apos;Salesforce.com/Jobs&apos; &amp; &apos;/&apos; &amp; TEXT(YEAR(DATEVALUE( Date_Time_Taken__c ))) &amp; &apos;/&apos; &amp; LPAD(TEXT(MONTH(DATEVALUE( Date_Time_Taken__c ))),2,&quot;0&quot;) &amp; &apos;-&apos; &amp; TEXT(YEAR(DATEVALUE( Date_Time_Taken__c )))</formula>
    <label>Google Drive Folder Path</label>
    <type>Text</type>
</CustomField>