force-app/main/default/objects/ATI_Job__c/fields/Google_Drive_Folder_Ref__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Ref__c</fullName>
    <label>Google Drive Folder Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>