force-app/main/default/objects/ATI_Job__c/fields/Google_Drive_Prev_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Prev_Folder_Name__c</fullName>
    <formula>SUBSTITUTE( Job_Prev_Name__c , &apos;|&apos;, &apos;&apos;)</formula>
    <label>Google Drive Prev Folder Name</label>
    <type>Text</type>
</CustomField>