force-app/main/default/objects/ATI_Job__c/fields/GP_Adj__c.field-meta.xml
<CustomField>
    <fullName>GP_Adj__c</fullName>
    <label>GP_Adj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>