force-app/main/default/objects/ATI_Job__c/fields/GP_Adj_RS__c.field-meta.xml
<CustomField>
    <fullName>GP_Adj_RS__c</fullName>
    <formula>if(round(abs( Job_to_Date_Work_Billed_Next_Month_RS__c * (1- Estimated_Gross_Profit_RS__c ) - Job_to_Date_Costs_Next_Month_Costs_RS__c ),-2)&lt;5000,0,(round(Job_to_Date_Work_Billed_Next_Month_RS__c * (1-Estimated_Gross_Profit_RS__c )- Job_to_Date_Costs_Next_Month_Costs_RS__c,-2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP_Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>