force-app/main/default/objects/ATI_Job__c/fields/GP_Performance__c.field-meta.xml
<CustomField>
    <fullName>GP_Performance__c</fullName>
    <formula>IF(AND(

Job_to_Date_GP_Percent_RS__c&lt; Estimated_Gross_Profit_RS__c , Diff__c&gt;0.001,Diff__c &lt;0.03),&quot;Intermediate&quot;,IF(Estimated_Gross_Profit_RS__c &lt;Job_to_Date_GP_Percent_RS__c,&quot;Good&quot;,IF(Job_to_Date_GP_Percent_RS__c&lt; Estimated_Gross_Profit_RS__c,&quot;Poor&quot;,NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Performance</label>
    <type>Text</type>
</CustomField>