force-app/main/default/objects/ATI_Job__c/fields/Guild_Approval__c.field-meta.xml
<CustomField>
    <fullName>Guild_Approval__c</fullName>
    <description>Executive management to approve guild request</description>
    <label>Guild Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>