force-app/main/default/objects/ATI_Job__c/fields/Guild_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Guild_Approval_Date__c</fullName>
    <description>Date that Executive Management approved a guild-- populated by &apos;Guild Approval Time Stamp&apos; workflow field update</description>
    <label>Guild Approval Date</label>
    <type>DateTime</type>
</CustomField>