force-app/main/default/objects/ATI_Job__c/fields/Guild_Request__c.field-meta.xml
<CustomField>
    <fullName>Guild_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For PM to request contacts off of the guild survey</description>
    <label>Guild Request</label>
    <type>Checkbox</type>
</CustomField>